<resources>

    <string name="app_name" translatable="false">FiloAngler</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgotPw">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="confirmPw">Confirm Password</string>
    <string name="register">Create Account</string>
    <string name="offlineMode">Offline Mode</string>
    <string name="lblResetPassword">Reset Password</string>
    <string name="lblResetPasswordDesc">Input the email of your account that you want to reset the password to. Upon submitting, you will receive an email to proceed with your password reset.</string>
    <string name="Confirm">Confirm</string>
    <string name="lblRegister">Register Account</string>
    <string name="lblVerify">Verify Your Email</string>
    <string name="lblVerifyDesc">Upon pressing confirm, a verification email will be sent to your provided email address. Please check your inbox and follow the instructions to verify your account. You must verify your account to log in. If you don\'t see the email, please check your spam folder. Thank you!</string>
    <string name="lblMoreAboutYourself">More About Yourself</string>
    <string name="lblMoreAboutYourselfDesc">Tell us more about yourself and your angling journey!</string>
    <string name="lblStatus">Angler Status:</string>
    <string name="txtFirstName">First Name</string>
    <string name="txtLastName">Last Name</string>
    <string name="lblBirthdate">Birthdate</string>
    <string name="rbtAspiring">Aspiring</string>
    <string name="rbtNovice">Novice</string>
    <string name="rbtProficient">Proficient</string>
    <string name="lblAddress">Address</string>
    <string name="title_activity_google_login">GoogleLoginActivity</string>
    <string name="txtCode">Code</string>
    <string name="Aspiring_Angler">Aspiring angler: No experience yet, but interested in the sport or learning more about marine life!</string>
    <string name="Novice_Angler">Novice angler: Takes part in angling but has limited experience. Interested in learning more about marine life!</string>
    <string name="Proficient_Angler">Proficient angler: Proficient angler takes part in angling for leisure and sport. Interested in teaching and helping other anglers and intake more information with marine life!</string>
    <string name="FirebaseInstanceUrl" translatable="false">https://filoangler-24b41-default-rtdb.asia-southeast1.firebasedatabase.app/</string>
    <string name="title_activity_side_bar_test">SideBarTest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnPost">Post</string>
    <string name="txtPosts">Posts</string>
    <string name="txtFollowers">Followers</string>
    <string name="txtFollowing">Following</string>
    <string name="title_activity_test1">test1</string>
    <string name="txtEditProfile">Edit Profile</string>
    <string name="txtFollow">Follow</string>
    <string name="txtDelete">Delete</string>
    <string name="txtReport">Report</string>
    <string name="txtSave">Save</string>
    <string name="txtChangePhoto">Change Photo</string>
    <string name="txtBio">Bio</string>
    <string name="txtNotifications">Notifications</string>
    <string name="txtLiked">Liked your post</string>
    <string name="txtFollowed">Followed you</string>
    <string name="txtCommented">Commented on your post</string>
    <string name="txtSearch">Search</string>
    <string name="txtCommonFish">Common Species:</string>
    <string name="txtTerrain">Terrain:</string>
    <string name="txtDetails">Details:</string>
    <string name="txtFishDescription">Description</string>
    <string name="txtFishBehavior">Behavior</string>
    <string name="txtFishHabitat">Habitat</string>
    <string name="txtFishLaw">Law</string>
    <string name="txtMore">See More</string>
    <string name="txtToday">Today</string>
    <string name="txtTonight">Tonight</string>
    <string name="txtHighest">Highest</string>
    <string name="txtLowest">Lowest</string>
    <string name="txtLowtide">Low Tide</string>
    <string name="txtHightide">High Tide</string>
    <string name="txtOfflineMode">Offline mode. Limited access to the application, log in with stable wifi connection to gain more access to the application!</string>
    <string name="txtLearnMore">Learn More</string>
    <string name="txtBehavior">Fish Behavior</string>
    <string name="txtTips">Tips</string>
    <string name="txtWelcome">Welcome to FiloAngler\'s Proficiency Test!</string>
    <string name="txtQuizIntro">This test is a fun way to boost your angling expertise and level up your proficiency status. All quiz content is accessible within the app to help you master each topic and become a more skilled angler. Good luck!</string>
    <string name="txtProceed">Proceed</string>
    <string name="btnPrevious">Previous</string>
    <string name="btnNext">Next</string>
    <string name="txtExit">Exit</string>
    <string name="game_view_content_description">Model Preview</string>
</resources>